Increased compile version to 28, exchanged http-lib, switched from background to foreground service and removed some obsolete classes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,7 @@
     <string name="unit_km">km</string>
     <string name="title_speed">Geschwindigkeit</string>
     <string name="title_speedPerHour">km/h</string>
+    <string name="service_notification_title">Aktivität gestartet...</string>
     
     <!-- Actions -->
     <string name="action_settings">Einstellungen</string>
